--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "linkit",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -11,9 +11,11 @@
     "debug": "~2.1.1",
     "express": "~4.12.2",
     "jade": "~1.9.2",
-    "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0",
     "mongodb": "*",
-    "mongoskin": "*"
+    "mongoose": "*",
+    "morgan": "~1.5.1",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
+    "serve-favicon": "~2.2.0"
   }
 }
