--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "linkit",
-  "version": "1.0.0",
+  "name": "WED1_Testat2_LinkIt",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
